# neopvz

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  loop.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: full-gate.yml  windows-artifact.yml
crates/neopvz-app/: Cargo.toml
crates/neopvz-app/src/: main.rs
crates/neopvz-audio/: Cargo.toml
crates/neopvz-audio/src/: lib.rs
crates/neopvz-core/: Cargo.toml
crates/neopvz-core/src/: lib.rs  save.rs
crates/neopvz-data/: Cargo.toml
crates/neopvz-data/src/: formats.rs  lib.rs  pak.rs
crates/neopvz-platform/: Cargo.toml
crates/neopvz-platform/src/: lib.rs
crates/neopvz-render/: Cargo.toml
crates/neopvz-render/src/: lib.rs  shader.wgsl
docs/: compatibility.md  dependencies.md  development.md
