[workspace]
members = [
    "crates/neopvz-core",
    "crates/neopvz-data",
    "crates/neopvz-render",
    "crates/neopvz-audio",
    "crates/neopvz-platform",
    "crates/neopvz-app",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Rancemxn/neopvz"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
kira = { version = "0.12", default-features = false, features = ["cpal", "ogg", "vorbis"] }
rand = { version = "0.10", features = ["chacha"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tempfile = "3.27"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
