[package]
name = "neopvz"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
neopvz-core = { path = "../neopvz-core" }
neopvz-data = { path = "../neopvz-data" }
neopvz-platform = { path = "../neopvz-platform" }
tracing.workspace = true
tracing-subscriber.workspace = true
